--- a/templates/sample.html
+++ b/templates/sample.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
+{% extends "base.html" %}
+	{% block content %}
 	<h1>HTMLファイルを追加</h1>
 	<p>「{{name}}」のように、「sample.py」から引き継いだ変数をHTMLに埋め込む事が可能です。</p>
 	<h1>入力フォームを追加</h1>
@@ -12,6 +7,6 @@
 		<p>a: <input type = "number" name = "a"></p>
 		<p>b: <input type = "number" name = "b"></p>
 		<p><input type = "submit" value = "submit"></p>
-	</form>	
-</body>
-</html>
+	</form>
+
+	{% endblock %}
